# genesis

./: .env.example  .gitignore  README.md  config.py
.omx/: metrics.json
v0/: README.md  (+1 more)
v1/: .gitignore  README.md  genesis_v1_implementation_guide.docx  genesis_v1_spec.docx  pyproject.toml
v1/.opencode/: AGENTS.md  oh-my-openagent.jsonc  oh-my-opencode.jsonc  opencode.json
v1/configs/: prototype_groq.jsonc  prototype_local.jsonc  runtime_omo.jsonc
v1/docs/: architecture.md
v1/genesis/: __init__.py  config.py  manifold_utils.py  models.py  observability.py  scholarly.py
v1/genesis/agents/: __init__.py  runtime.py
v1/genesis/cli/: main.py
v1/genesis/domain_knowledge/: __init__.py  astrofoundation.py  base.py  registry.py
v1/genesis/harness/: __init__.py  decomposer.py  history_reader.py  instruction_composer.py  loop.py  token_budget.py
v1/genesis/modules/adversarial/: __init__.py  criteria_generator.py  formal.py  literature.py  orchestrator.py  runtime.py  socratic.py
v1/genesis/modules/citations/: __init__.py  agent.py
v1/genesis/modules/ideation/: __init__.py  greedy.py  low_density.py  orchestrator.py  pollination.py  scorer.py
v1/genesis/modules/optimizer/: __init__.py  oracle_resolver.py  parallel.py  proposer.py  runner.py
v1/genesis/paper/: __init__.py  synthesizer.py
v1/genesis/storage/: __init__.py  causal_dag.py  filesystem.py  ledger.py  manifold.py
v1/genesis/taste/: __init__.py  features.py  gp_model.py  persistence.py
v1/scripts/: build_manifold.py  init_taste.py  run_experiment.py
v1/tests/benchmarks/: test_custom_benchmark_suite.py  test_hallucination_rate.py  test_smoke_benchmarks.py  test_taste_calibration.py
v1/tests/integration/: test_full_run.py
v1/tests/unit/: test_adversarial.py  test_cli_runtime.py  test_config.py  test_full_paper_capability.py  test_harness.py  test_history_reader.py  test_modules_pipeline.py  test_optimizer_and_taste.py  test_provider_runtime.py  test_scholarly.py  test_storage.py  test_visual_aesthetics.py
(+110 files in other folders)
